Changed to penguins_clean for the bar plot example

--- a/notebooks/02-data-exploration-notebook.Rmd
+++ b/notebooks/02-data-exploration-notebook.Rmd
@@ -158,7 +158,7 @@ dplyr::glimpse(penguins_clean)
 Numerical exploration of a data set generally consists of computing various relevant statistics for each of the variables in a data set in order to summarize the data.
 
 | numeric summary                 | variable type | summarizes        | R function            |
-|---------------------------------|---------------|-------------------|-----------------------|
+|------------------------|----------------|----------------|-----------------|
 | mean                            | `numeric`     | center            | `mean`                |
 | median                          | `numeric`     | center            | `median`              |
 | variance                        | `numeric`     | spread            | `var`                 |
@@ -366,7 +366,7 @@ The two most popular packages for producing graphics in R are:
 -   **ggplot2**: a "grammar of graphics" that is able to produce complex graphics with automated legends in a consistent, systematic way.
 
 | Visual summary       | Variable types          | Summary type | Base functions               | geoms                        |
-|:---------------------|:------------------------|:-------------|:-----------------------------|:-----------------------------|
+|:--------------|:--------------|:--------------|:--------------|:--------------|
 | box plot             | `numeric`               | univariate   | `boxplot`                    | `geom_boxplot`               |
 | histogram            | `numeric`               | univariate   | `hist`                       | `geom_histogram`             |
 | density plot         | `numeric`               | univariate   | `plot`, `density`            | `geom_density`               |
@@ -407,7 +407,7 @@ A bar plot (or bar chart) displays the number or proportion of observations in e
 The simplest way to create a bar plot in base R is using the `plot` function on a `factor`.
 
 ```{r}
-plot(penguins$island, main = "distribution of island")
+plot(penguins_clean$island, main = "distribution of island")
 ```
 
 Alternatively, we can combine `barplot` with the `table` function.
