--- a/notebooks/09-basic-structure-and-error-assumption-diagnostics-notebook.qmd
+++ b/notebooks/09-basic-structure-and-error-assumption-diagnostics-notebook.qmd
@@ -14,11 +14,9 @@ wrap: 'none'
 
 To open this information in an interactive Colab notebook, click the Open in Colab graphic below.
 
-<a href="https://colab.research.google.com/github/jfrench/LinearRegression/blob/master/notebooks/09-basic-structure-and-error-assumption-diagnostics-notebook.ipynb">
-   <img src="https://colab.research.google.com/assets/colab-badge.svg">
-</a>
+<a href="https://colab.research.google.com/github/jfrench/LinearRegression/blob/master/notebooks/09-basic-structure-and-error-assumption-diagnostics-notebook.ipynb"> <img src="https://colab.research.google.com/assets/colab-badge.svg"/> </a>
 
----
+------------------------------------------------------------------------
 
 ```{r}
 if(!require(faraway, quietly = TRUE)) {
@@ -41,7 +39,7 @@ if(!require(lmtest, quietly = TRUE)) {
 }
 ```
 
-We adjust some printing options for clarity. 
+We adjust some printing options for clarity.
 
 ```{r}
 options(digits = 7, scipen = 2)
@@ -51,28 +49,28 @@ We discuss basic, but effective approaches for assessing the validity of several
 
 We will focus on assessing assumptions related:
 
-- Model structure.
-- The distribution of the errors.
+-   Model structure.
+-   The distribution of the errors.
 
-These assumptions tend to be checked in similar ways. 
+These assumptions tend to be checked in similar ways.
 
 # Illustration data sets
 
-To facilitate this discussion we will consider two data sets. 
+To facilitate this discussion we will consider two data sets.
 
 The first data set we will consider is the `prostate` data set, which is available in the **faraway** R package. The data provide information about 97 men who were going to receive a radical prostatectomy. The data set has 97 rows and 9 columns with the variables:
 
 The prostate data frame has 97 rows and 9 columns. A study on 97 men with prostate cancer who were due to receive a radical prostatectomy. The **faraway** package provides the following descriptions of the variables:
 
-- `lcavol`: log(cancer volume).
-- `lweight`: log(prostate weight).
-- `age`: age in years.
-- `lbph`: log(benign prostatic hyperplasia amount).
-- `svi`: seminal vesicle invasion.
-- `lcp`: log(capsular penetration).
-- `gleason`: Gleason score.
-- `pgg45`: percentage Gleason scores 4 or 5.
-- `lpsa`: log(prostate specific antigen).
+-   `lcavol`: log(cancer volume).
+-   `lweight`: log(prostate weight).
+-   `age`: age in years.
+-   `lbph`: log(benign prostatic hyperplasia amount).
+-   `svi`: seminal vesicle invasion.
+-   `lcp`: log(capsular penetration).
+-   `gleason`: Gleason score.
+-   `pgg45`: percentage Gleason scores 4 or 5.
+-   `lpsa`: log(prostate specific antigen).
 
 We load this data set.
 
@@ -89,21 +87,21 @@ prostate$svi <- factor(prostate$svi,
 
 We will also use the `home_prices` data set in the **KingCountyHouses** package. The `home_prices` data set contains the sales prices of homes sold in King County, WA between 2014-05-02 and 2015-05-27. The data set is a data frame (tibble) with 21,613 rows and 19 columns. A subset of the relevant variables includes:
 
-- `date_sold`: date of sale.
-- `price`: sale price (log10 units).
-- `bedrooms`: number of bedrooms.
-- `bathrooms`: number of bathrooms.
-- `sqft_living`: size of living space.
-- `sqft_lot`: size of property.
-- `floors`: number of floors.
-- `waterfront`: indicator variable for a waterfront view.
-- `view`: a numeric rating of the quality of the home's view.
-- `condition`: a factor variable indicating the condition of the house (poor to very good).
-- `sqft_above`: size of living space above ground.
-- `sqft_basement` (numeric):size of living space below ground.
-- `yr_built`: year the home was built.
-- `year_renovated`: the year renovated and, if not renovated, the year built.
-- `zip_code`: the zip code of the home.
+-   `date_sold`: date of sale.
+-   `price`: sale price (log10 units).
+-   `bedrooms`: number of bedrooms.
+-   `bathrooms`: number of bathrooms.
+-   `sqft_living`: size of living space.
+-   `sqft_lot`: size of property.
+-   `floors`: number of floors.
+-   `waterfront`: indicator variable for a waterfront view.
+-   `view`: a numeric rating of the quality of the home's view.
+-   `condition`: a factor variable indicating the condition of the house (poor to very good).
+-   `sqft_above`: size of living space above ground.
+-   `sqft_basement` (numeric):size of living space below ground.
+-   `yr_built`: year the home was built.
+-   `year_renovated`: the year renovated and, if not renovated, the year built.
+-   `zip_code`: the zip code of the home.
 
 We load the data below.
 
@@ -123,13 +121,13 @@ We will also remove the `sqft_basement` variable because the `sqrt_above` and `s
 home_prices <- home_prices[,-12]
 ```
 
-#
+# 
 
 The validity of our assumptions depend on the model fit to the data.
 
-For the prostate data we will regress `lpsa` on all the remaining variables in the `prostate` data frame. 
+For the prostate data we will regress `lpsa` on all the remaining variables in the `prostate` data frame.
 
-- A shortcut for this is to use the formula `y ~ .`, where `y` is the response and `.` indicates to use all of the variables in the data frame containing `y`.
+-   A shortcut for this is to use the formula `y ~ .`, where `y` is the response and `.` indicates to use all of the variables in the data frame containing `y`.
 
 ```{r}
 lmod_prostate <- lm(lpsa ~ ., data = prostate)
@@ -149,24 +147,24 @@ As mentioned in the previous chapter, the most important assumption we make for 
 
 Technically, this assumption is impossible to verify. However, we can verify that the model does an adequate job of approximating the behavior of the observed data.
 
-- If the model doesn't do a good job of mimicking the behavior of the observed data, then we can say this this assumption is violated.
+-   If the model doesn't do a good job of mimicking the behavior of the observed data, then we can say this this assumption is violated.
 
 **Residual plot**
 
----
+------------------------------------------------------------------------
 
 The most basic approach for assessing whether the structural assumption is satisfied uses a plot of the residuals versus fitted values.
 
-- This assumption is satisfied (technically, not violated) if the residuals appear to be randomly but symmetrically scattered around a horizontal line running through 0 on the y-axis.
-- This assumption is violated if there are systematic pattern in the residuals like a trend or a curve departing from symmetry around 0.
+-   This assumption is satisfied (technically, not violated) if the residuals appear to be randomly but symmetrically scattered around a horizontal line running through 0 on the y-axis.
+-   This assumption is violated if there are systematic pattern in the residuals like a trend or a curve departing from symmetry around 0.
 
 We provides example residuals plots in panels (a) and (b) below.
 
-- Panel (a) is consistent with an appropriate model structure.
-    - The residuals are randomly scattered and symmetric around the horizontal line running through the y-axis at 0.
-- Panel (b) is consistent with a structural problem.
-    - The data systematically curve as we move from left to right along the x-axis.
-    - In this particular example, we are missing a needed quadratic regressor in our model.
+-   Panel (a) is consistent with an appropriate model structure.
+    -   The residuals are randomly scattered and symmetric around the horizontal line running through the y-axis at 0.
+-   Panel (b) is consistent with a structural problem.
+    -   The data systematically curve as we move from left to right along the x-axis.
+    -   In this particular example, we are missing a needed quadratic regressor in our model.
 
 ```{r}
 #| echo: false
@@ -193,21 +191,21 @@ par(mfrow = c(1, 1))
 
 Why does the residual plot approach work for assessing a structure problem?
 
-- We assume that the errors have mean zero for any combination of our predictors.
-- If our fitted model adequately captures the mean of the data, then the residuals will have the same property.
-- We expect our residuals to randomly fluctuate above and below 0 with no systematic pattern related to a specific combination of regressors. 
+-   We assume that the errors have mean zero for any combination of our predictors.
+-   If our fitted model adequately captures the mean of the data, then the residuals will have the same property.
+-   We expect our residuals to randomly fluctuate above and below 0 with no systematic pattern related to a specific combination of regressors.
 
-Note: assessing whether the structure of the model is correct is difficult to separate from assessing the validity of the assumption that the mean of the errors is zero. 
+Note: assessing whether the structure of the model is correct is difficult to separate from assessing the validity of the assumption that the mean of the errors is zero.
 
-- Even if the errors didn't have mean zero (but the model was correct), then our regression model would be non-identifiable because we wouldn't be able to separate the mean of the errors from the mean of the other components of the model.
+-   Even if the errors didn't have mean zero (but the model was correct), then our regression model would be non-identifiable because we wouldn't be able to separate the mean of the errors from the mean of the other components of the model.
 
 A related approach for assessing the validity of the structural assumption is to examine plots of the residuals versus each predictor.
 
-- The structural assumption isn't violated as long as the residuals appear to be randomly and symmetrically scattered around a horizontal line running through 0 on the y-axis .
+-   The structural assumption isn't violated as long as the residuals appear to be randomly and symmetrically scattered around a horizontal line running through 0 on the y-axis .
 
 **Structural check for `prostate` data**
 
----
+------------------------------------------------------------------------
 
 We examine a plot of the residuals versus fitted values for the model fitted to the `prostate` data.
 
@@ -223,8 +221,8 @@ The points appear to be randomly scattered above and below 0 as we move from lef
 
 The `residualsPlots` function in the **car** package will produce plots of the residuals versus each first-order predictor and the fitted values.
 
-- Setting `tests = FALSE` and `quadratic = FALSE` simplifies the output produced by the function.
-- Setting `fitted = FALSE` prevents the function from displaying a plot of the residuals versus fitted values.
+-   Setting `tests = FALSE` and `quadratic = FALSE` simplifies the output produced by the function.
+-   Setting `fitted = FALSE` prevents the function from displaying a plot of the residuals versus fitted values.
 
 We examine the residual plots for the model fit to the `prostate` data below. Because there would be 9 plots by default, we select only 4 of the predictors to simplify our display.
 
@@ -234,20 +232,18 @@ residualPlots(lmod_prostate,
               tests = FALSE, quadratic = FALSE, fitted = FALSE)
 ```
 
-
 The residual plots associated with `lcavol` and `age` look relatively symmetric around 0 with no clear patterns.
 
 For a categorical predictor like `svi`, we want the boxplot of the residuals to be symmetric around zero, which is what we see for this data. There is no evidence of a structural problem.
 
-Looking at the residual plot for the `gleason` predictor, the residual values tend to be lower for larger values of `gleason`. 
+Looking at the residual plot for the `gleason` predictor, the residual values tend to be lower for larger values of `gleason`.
 
-- This may be something to explore further.
-- There are relatively few observations with high `gleason` values, so it is difficult to draw a definitive conclusion. This is not clear evidence of a structural problem.
-
+-   This may be something to explore further.
+-   There are relatively few observations with high `gleason` values, so it is difficult to draw a definitive conclusion. This is not clear evidence of a structural problem.
 
 **Structural check for `home_prices` data**
 
----
+------------------------------------------------------------------------
 
 We now examine a plot of the residuals versus fitted values for the `home_prices` data.
 
@@ -257,18 +253,18 @@ residualPlot(lmod_homes, quadratic = FALSE)
 
 There are many more points in this plot compared to the residual plot for the `prostate` data, making it a bit more difficult to assess this assumption.
 
-The bulk of the data between the fitted values 5.25 and 6.25 is approximately symmetric around zero (as far as we can tell). 
+The bulk of the data between the fitted values 5.25 and 6.25 is approximately symmetric around zero (as far as we can tell).
 
 There is one unusual point in the upper left part of the plot.
 
-- This is an *outlier*.
-- Since this is only a single unusual point in a data set with many observations, this is not something to be concerned about.
+-   This is an *outlier*.
+-   Since this is only a single unusual point in a data set with many observations, this is not something to be concerned about.
 
 However, the residuals begin to systematically fall below 0 when the fitted values are above 6.25.
 
-- This is an indication that we have a structural deficiency in our fitted model that should be addressed.
+-   This is an indication that we have a structural deficiency in our fitted model that should be addressed.
 
-# Checking constant variance 
+# Checking constant variance
 
 Another key assumption is that the variance of the errors is constant for all combinations of regressor values.
 
@@ -290,18 +286,18 @@ Under the standard assumptions, the standardized residuals have mean 0 and varia
 
 **Standardized residual plot**
 
----
+------------------------------------------------------------------------
 
 The constant variance assumption can be assessed using plots of the standardized residuals versus the fitted values or predictors.
 
-- If the constant error variance assumption is satisfied, then the points of these plots should have constant thickness, symmetric about 0 as we move from left to right along the x-axis.
+-   If the constant error variance assumption is satisfied, then the points of these plots should have constant thickness, symmetric about 0 as we move from left to right along the x-axis.
 
 Consider the 4 plots below:
 
-- Panel (a) shows data that perfectly satisfy this assumption. However, the plot itself doesn't have perfect constant thickness as we move from left to right along the axis.
-- Panel (b) shows data with increasing variability as we move from left to right across the x-axis. This is difficult to see in the plot because the variability increases but then appears to decrase.
-- Panel (c) shows data that has slightly decreasing variability as we move from left to right along the x-axis. However, this is difficult to see in the plot..
-- Panel (d) shows data that has a structural issue (notice the curve in the data compared to the 0-line) while the points also increase in variability as we move from left to right along the x-axis.
+-   Panel (a) shows data that perfectly satisfy this assumption. However, the plot itself doesn't have perfect constant thickness as we move from left to right along the axis.
+-   Panel (b) shows data with increasing variability as we move from left to right across the x-axis. This is difficult to see in the plot because the variability increases but then appears to decrase.
+-   Panel (c) shows data that has slightly decreasing variability as we move from left to right along the x-axis. However, this is difficult to see in the plot..
+-   Panel (d) shows data that has a structural issue (notice the curve in the data compared to the 0-line) while the points also increase in variability as we move from left to right along the x-axis.
 
 ```{r}
 #| echo: false
@@ -338,27 +334,27 @@ abline(0, 0, lty = 2)
 par(mfrow = c(1, 1))
 ```
 
-What should we do if the plots are inconclusive? 
+What should we do if the plots are inconclusive?
 
-- We don't conclude an assumption is violated unless the violation is clear.
-- Try to use a different method.
+-   We don't conclude an assumption is violated unless the violation is clear.
+-   Try to use a different method.
 
 **Scale-location plot**
 
----
+------------------------------------------------------------------------
 
 A scale-location plot can be used to assess whether the variance is constant when the standardized residual plot is inconclusive AND the structural assumption doesn't appear to be violated.
 
 A *scale-location* plot is a plot of $\sqrt{|\hat{\boldsymbol{\epsilon}}|}$) versus $\hat{\mathbf{y}}$, i.e., a plot of the square root of the absolute value of the residuals versus the fitted values.
 
-- If the constant variance assumption is satisfied (i.e., not clearly violated), then the points of this plot should should have constant thickness as we move from left to right along the x-axis.
+-   If the constant variance assumption is satisfied (i.e., not clearly violated), then the points of this plot should should have constant thickness as we move from left to right along the x-axis.
 
-Recall that in panel (c) of the previous plot that we thought there was a slight decrease in the variability of the residuals as we moved from left-to-right across the x-axis. 
+Recall that in panel (c) of the previous plot that we thought there was a slight decrease in the variability of the residuals as we moved from left-to-right across the x-axis.
 
 We produce a scale-location plot for panel (c) above.
 
-- The red line is a visual indication of how the variability changes from left to right and should be approximately flat if this assumption is not violated. 
-- The red line clearly decreases in our plot indicating a violation of the constant variance assumption.
+-   The red line is a visual indication of how the variability changes from left to right and should be approximately flat if this assumption is not violated.
+-   The red line clearly decreases in our plot indicating a violation of the constant variance assumption.
 
 ```{r}
 #| echo: false
@@ -369,11 +365,11 @@ plot(lmod3, which = 3)
 
 **Constant variance check for `prostate` data**
 
-We now assess the validity of the constant variance assumption for the `prostate` data. 
+We now assess the validity of the constant variance assumption for the `prostate` data.
 
 The `residualPlot` frunction from the **car** package can be used to construct a plot of the standardized residuals versus the fitted values.
 
-- Set `type = "rstandard"`.
+-   Set `type = "rstandard"`.
 
 We produce a standarized residual plot for the model fitted to the `prostate` data.
 
@@ -381,12 +377,11 @@ We produce a standarized residual plot for the model fitted to the `prostate` da
 residualPlot(lmod_prostate, type = "rstandard", quadratic = FALSE)
 ```
 
-
 The plot of the standardized residuals versus the fitted values has almost perfectly constant thickness as we move from left to right along the x-axis, so there is no indication of a non-constant variance issue for our fitted model.
 
 We can produce plots of the standardized residuals versus the predictors using the `residualPlots` function.
 
-- We must specify `type == "rstandard"`.
+-   We must specify `type == "rstandard"`.
 
 There is no indication of a violation of the constant variance assumption in the plots below.
 
@@ -398,7 +393,7 @@ residualPlots(lmod_prostate, type = "rstandard",
 
 **Constant variance check for `home_prices` data**
 
-We now assess the validity of the constant error variance assumption for the `home_prices` data. 
+We now assess the validity of the constant error variance assumption for the `home_prices` data.
 
 Our standardized residual plot seems to show clear evidence that the variability tends to decrease as we move from left to right along the x-axis.
 
@@ -406,13 +401,12 @@ Our standardized residual plot seems to show clear evidence that the variability
 residualPlot(lmod_homes, type = "rstandard", quadratic = FALSE)
 ```
 
-
 The verify our belief, we can look at a scale-location plot for the fitted model
 
 The `plot` function can be used to produce a scale-location plot.
 
-- The `plot` function has a method for `lm` objects.
-- Setting the `which` argument to 3 will produce a scale-location plot.
+-   The `plot` function has a method for `lm` objects.
+-   Setting the `which` argument to 3 will produce a scale-location plot.
 
 We produce a scale-location plot of the fitted model for `home_prices`.
 
@@ -430,22 +424,22 @@ A key assumption of many of our tests and confidence intervals is that the error
 
 We have previously shown that if our errors are normal that our residuals are also normal.
 
-- If our errors have mean zero, then the residuals also have mean zero.
+-   If our errors have mean zero, then the residuals also have mean zero.
 
 **The Q-q plot**
 
----
+------------------------------------------------------------------------
 
 To assess whether the assumption of normally-distributed errors is reasonable, we will compare the residuals to the quantiles we would expect to get from the same number of i.i.d. normally-distributed observations with mean 0 and variance 1.
 
-- If the normality assumption is satisfied, then a a plot of the observed values compared to the theoretical quantiles will fall approximately in a straight line.
-- This plot is called a quantile-quantile or *q-q plot*.
+-   If the normality assumption is satisfied, then a a plot of the observed values compared to the theoretical quantiles will fall approximately in a straight line.
+-   This plot is called a quantile-quantile or *q-q plot*.
 
 The `qqnorm` function can be used to create a q-q plot of data we believe to come from a normal distribution.
 
 We provide an example below of a q-q plot for normally-distributed data with a mean of 0 and a variance of 1.
 
-- We can use the `qqline` function to add a reference line to see how closely the points fall to a straight line.
+-   We can use the `qqline` function to add a reference line to see how closely the points fall to a straight line.
 
 ```{r}
 set.seed(19)
@@ -462,8 +456,8 @@ Observations that deviate substantially from normality will result in a q-q plot
 
 Consider a q-q plot of data sampled from a chi-square distribution with 5 degrees of freedom.
 
-- This distribution is positively skewed.
-- The points of the q-q plot do not fall that closely to a straight line.
+-   This distribution is positively skewed.
+-   The points of the q-q plot do not fall that closely to a straight line.
 
 ```{r}
 set.seed(22)
@@ -472,15 +466,15 @@ qqnorm(e2)
 qqline(e2)
 ```
 
-Q-q plots are generally constructed under the assumption that the data are independent and identically distributed. 
+Q-q plots are generally constructed under the assumption that the data are independent and identically distributed.
 
-- Ordinary residuals do not have constant variance.
-- It is preferable to scale the residuals to have constant variance prior to constructing a q-q plot.
-    - The standardized residuals, $r_i$, $i=1,2,\ldots,n$ are one form of scaled residuals with variance equal to 1.
-    - The studentized residuals, $t_i$, $i=1,2,\ldots,n$ are another form of residuals scaled to have a variance of 1.
-        - The denominator uses a different estimate of $\sigma$ than the standardized residuals. We do not discuss those details here.
-        - In that case, we actually want to compare the observed values to quantiles from a $t$ distribution with $n-p-1$ degrees of freedom, assuming our model has $p$ estimated regression coefficients.
-- Though the residuals are not independent, the correlation is typically weak and can be ignored when constructing a q-q plot.
+-   Ordinary residuals do not have constant variance.
+-   It is preferable to scale the residuals to have constant variance prior to constructing a q-q plot.
+    -   The standardized residuals, $r_i$, $i=1,2,\ldots,n$ are one form of scaled residuals with variance equal to 1.
+    -   The studentized residuals, $t_i$, $i=1,2,\ldots,n$ are another form of residuals scaled to have a variance of 1.
+        -   The denominator uses a different estimate of $\sigma$ than the standardized residuals. We do not discuss those details here.
+        -   In that case, we actually want to compare the observed values to quantiles from a $t$ distribution with $n-p-1$ degrees of freedom, assuming our model has $p$ estimated regression coefficients.
+-   Though the residuals are not independent, the correlation is typically weak and can be ignored when constructing a q-q plot.
 
 Standardized or studentized residuals should be used to assess the normality assumption.
 
@@ -488,7 +482,7 @@ The `qqPlot` function in the **car** packages produced q-q plots of the studenti
 
 **The Shapiro-Wilk test**
 
----
+------------------------------------------------------------------------
 
 Another approach to assess normality is the Shapiro-Wilk test (Shapiro and Wilk, 1965).
 
@@ -502,7 +496,7 @@ The Shapiro-Wilk test can be applied to a vector of data using the `shapiro.test
 
 **Normality check for `prostate` data**
 
----
+------------------------------------------------------------------------
 
 We now use the `qqPlot` function to create a q-q plot of the studentized residuals for the model fitted to the prostate data.
 
@@ -514,11 +508,11 @@ The points of the q-q plot fall close to a straight line, so the assumption of n
 
 The `qqPlot` function also produces pointwise 95% confidence envelopes for the quantiles, giving us an idea of how much the points can deviate from a straight line without the assumption being violated.
 
-- The envelopes are pointwise, which means they don't adjust for multiple comparisons.
+-   The envelopes are pointwise, which means they don't adjust for multiple comparisons.
 
 To help confirm our belief, we apply the Shapiro-Wilk test to the standardized residuals of our fitted model.
 
-- We use the `rstandard` function to extract the standardized residuals from our fitted model.
+-   We use the `rstandard` function to extract the standardized residuals from our fitted model.
 
 ```{r}
 shapiro.test(rstandard(lmod_prostate))
@@ -526,10 +520,9 @@ shapiro.test(rstandard(lmod_prostate))
 
 Since our p-value is large, we believe our residuals (and by proxy, our errors) are a sample from a normal distribution.
 
-
 **Normality check for `prostate` data**
 
----
+------------------------------------------------------------------------
 
 We start with a q-q plot of the studentized residuals of the fitted model for the `home_prices` data.
 
@@ -539,14 +532,14 @@ qqPlot(lmod_homes)
 
 There are so many points in our plot that it is difficult to assess the central part of the plot. However, it is clear that the tails of the q-q plot deviate from a straight line.
 
-- The normal error assumption appears to be violated for our fitted model.
+-   The normal error assumption appears to be violated for our fitted model.
 
 We could confirm our beliefs using the Shapiro-Wilk test, but the R function takes a maximum of 5000 observations, and we have over 20,000 residuals.
 
 Even though the normal error assumption appears to be violated for our fitted model, this may not be an issue in practice.
 
-- The Central Limit Theorem applies to our estimated coefficients, so our confidence and hypothesis test should still be approximately valid.
-- Our prediction intervals are very sensitive to the normality assumption, so that type of inference should not be trusted in this setting.
+-   The Central Limit Theorem applies to our estimated coefficients, so our confidence and hypothesis test should still be approximately valid.
+-   Our prediction intervals are very sensitive to the normality assumption, so that type of inference should not be trusted in this setting.
 
 # Checking for correlated errors
 
@@ -554,7 +547,7 @@ Our errors are supposed to be uncorrelated.
 
 This assumption is impractical to check unless our data are time series or longitudinal data (observations observed over a series of time) or spatial data (the observations are associated with a specific geographic location).
 
-- We will examine how to assess this assumption for time series data.
+-   We will examine how to assess this assumption for time series data.
 
 If the data are not time series or spatial data then we don't need to bother checking this assumption.
 
@@ -578,7 +571,7 @@ The passenger totals are clearly increasing over time and also increasing in var
 
 We take the `log` of `passengers` to correct for the increasing variability of that variable over time.
 
-- The transformed data doesn't appear to have the same issue.
+-   The transformed data doesn't appear to have the same issue.
 
 ```{r}
 plot(log(passengers) ~ month, data = air)
@@ -590,18 +583,17 @@ We will regress `log(passengers)` on `month` and then discuss diagnostics to ass
 lmod_air <- lm(log(passengers) ~ month, data = air)
 ```
 
-
 **Residuals versus time plot**
 
----
+------------------------------------------------------------------------
 
 The easiest way to check for correlated residuals in time series data is to plot the residuals versus the time variable.
 
-- If the residuals tend to cluster with sequences of positive or negative residuals, then the data have a positive correlation.
+-   If the residuals tend to cluster with sequences of positive or negative residuals, then the data have a positive correlation.
 
 We create a scatter plot of the residuals versus month for the model fitted to the passengers data.
 
-- We add a horizontal reference line at $y = 0$.
+-   We add a horizontal reference line at $y = 0$.
 
 ```{r}
 plot(residuals(lmod_air) ~ month, data = air,
@@ -613,7 +605,7 @@ The pattern is a bit difficult to see because there is so much data.
 
 If we focus in on the first 24 months of data, we can clearly see sequences of times where the residuals are almost all positive or almost all negative.
 
-- The residuals appear to have non-neglible positive correlation.
+-   The residuals appear to have non-neglible positive correlation.
 
 ```{r}
 plot(residuals(lmod_air) ~ month, data = air,
@@ -623,14 +615,14 @@ abline(0, 0)
 
 **Successive residual pairs plot**
 
----
+------------------------------------------------------------------------
 
 A better way to assess whether there is strong temporal correlation in the residuals is to plot pairs of successive residuals versus each other, i.e., to plot $\hat{\epsilon}_{i+1}$ versus $\hat{\epsilon}_i$ for $i=1,2,\ldots,n-1$.
 
-- If the successive residuals show a positive trend then there is positive temporal correlation in the residuals.
-- If the successive residuals show a negative trend then there is negative temporal correlation in the residuals.
-    - Negative correlation is very difficult to see visually when looking at a plot of the residuals over time because the pattern will look random.
-- If the successive residuals appear to be a random scatter around 0 then there is no evidence of temporal correlation in the residuals.
+-   If the successive residuals show a positive trend then there is positive temporal correlation in the residuals.
+-   If the successive residuals show a negative trend then there is negative temporal correlation in the residuals.
+    -   Negative correlation is very difficult to see visually when looking at a plot of the residuals over time because the pattern will look random.
+-   If the successive residuals appear to be a random scatter around 0 then there is no evidence of temporal correlation in the residuals.
 
 To construct a plot of successive residual pairs we can use the following code.
 
@@ -649,26 +641,26 @@ The remaining code adds horizontal and vertical reference lines at $y=0$ and $x=
 
 Since the successive residual pairs plot has a positive trend, there is clear evidence of positive temporal correlation among the residuals (and by proxy, the errors).
 
-If either of the previous plots do not provide a satisfactory conclusion, then we can use the Durbin-Watson to draw a definitive conclusion. 
+If either of the previous plots do not provide a satisfactory conclusion, then we can use the Durbin-Watson to draw a definitive conclusion.
 
 **The Durbin-Watson test**
 
----
+------------------------------------------------------------------------
 
 A formal test for temporal correlation between residuals can be performed using the *Durbin-Watson test*.
 
-- Let $\rho$ denote the temporal correlation between residuals.
-  - H~0~: The residuals are uncorrelated, $\rho = 0$.
-  - H~a~: The residuals are related in some way ($\rho \neq 0$, $\rho > 0$, or $\rho < 0$).
-- The test statistic is:
+-   Let $\rho$ denote the temporal correlation between residuals.
+    -   H~0~: The residuals are uncorrelated, $\rho = 0$.
+    -   H~a~: The residuals are related in some way ($\rho \neq 0$, $\rho > 0$, or $\rho < 0$).
+-   The test statistic is:
 
 $$DW = \frac{\sum_{i=2}^n(\hat{\epsilon}_i - \hat{\epsilon}_{i-1})^2}{\sum_{i=1}^n \hat{\epsilon}_i^2}.$$
 
-- The `dwtest` function in the `lmtest` package can be used to test this hypothesis.
+-   The `dwtest` function in the `lmtest` package can be used to test this hypothesis.
 
 We will test for positive temporal correlation among the residuals using the `dwtest` function.
 
-- Setting `alternative = "greater"` sets H~a~ to be $\rho > 0$. 
+-   Setting `alternative = "greater"` sets H~a~ to be $\rho > 0$.
 
 ```{r}
 dwtest(lmod_air, alternative = "greater")
@@ -680,25 +672,25 @@ The p-value for this test is close to 0, so we conclude that there is positive c
 
 **Structural assumption**
 
-- Plot of residuals versus fitted values.
-- Plot of residuals versus each predictor.
-    - For both plots, if this assumption is satisfied, the residuals should be symmetrically and randomly scattered around a horizontal line at $y=0$ as we move from left to right along the x-axis.
+-   Plot of residuals versus fitted values.
+-   Plot of residuals versus each predictor.
+    -   For both plots, if this assumption is satisfied, the residuals should be symmetrically and randomly scattered around a horizontal line at $y=0$ as we move from left to right along the x-axis.
 
 **Constant error variance assumption**
 
-- Plot of standardized residuals versus fitted values.
-- Plot of standardized residuals versus each predictor.
-    - For both plots, if this assumption is satisfied, then the points should have constant thickness around a horizontal line at $y=0$ as we move from left to right along the x-axis.
-- Plot of $\sqrt{| \hat{\epsilon} |}$ versus fitted values.
-    - Only use this check if the structural assumption appears to be satisfied.
-    - If this assumption is satisfied, then the points of the plot should have constant thickness as we move from left to right along the x-axis.
-    
+-   Plot of standardized residuals versus fitted values.
+-   Plot of standardized residuals versus each predictor.
+    -   For both plots, if this assumption is satisfied, then the points should have constant thickness around a horizontal line at $y=0$ as we move from left to right along the x-axis.
+-   Plot of $\sqrt{| \hat{\epsilon} |}$ versus fitted values.
+    -   Only use this check if the structural assumption appears to be satisfied.
+    -   If this assumption is satisfied, then the points of the plot should have constant thickness as we move from left to right along the x-axis.
+
 **Normal error assumption**
 
-- Q-q plot of (standardized or studentized) residuals.
-    - The points should follow approximately a straight line.
-- Shapiro-Wilk test.
-    - The null hypothesis is that the residuals are consistent with a sample from a normal distribution, so we want the p-value of this test to be relatively large.
+-   Q-q plot of (standardized or studentized) residuals.
+    -   The points should follow approximately a straight line.
+-   Shapiro-Wilk test.
+    -   The null hypothesis is that the residuals are consistent with a sample from a normal distribution, so we want the p-value of this test to be relatively large.
 
 **Uncorrelated errors**
 
@@ -706,19 +698,19 @@ This only needs to be checked for time series/longitudinal data or geographicall
 
 For assessing temporal autocorrelation:
 
-- Plot of residuals versus time.
-    - The plot should be a random scatter of points with no clear pattern if this assumption is satisfied.
-    - If there are sequences where there are many positive residuals or many negative residuals, then this assumption is violated and the residuals exhibit positive temporal correlation.
-- Plot of successive residuals pairs.
-    - A positive trend indicates positive temporal correlation.
-    - A negative trend indicates negative temoral correlation.
-    - A random scatter indicates the residuals are consistent with being uncorrelated.
-- Durbin-Watson test applied to the residuals.
-    - A large p-value indicates the residuals are compatible with being uncorrelated.
-    - A small p-value indicates the residuals are temporally correlated, with the type of autocorrelation detected being associated with the H~a~.
+-   Plot of residuals versus time.
+    -   The plot should be a random scatter of points with no clear pattern if this assumption is satisfied.
+    -   If there are sequences where there are many positive residuals or many negative residuals, then this assumption is violated and the residuals exhibit positive temporal correlation.
+-   Plot of successive residuals pairs.
+    -   A positive trend indicates positive temporal correlation.
+    -   A negative trend indicates negative temporal correlation.
+    -   A random scatter indicates the residuals are consistent with being uncorrelated.
+-   Durbin-Watson test applied to the residuals.
+    -   A large p-value indicates the residuals are compatible with being uncorrelated.
+    -   A small p-value indicates the residuals are temporally correlated, with the type of autocorrelation detected being associated with the H~a~.
 
 # References
 
 Box, G. E. P., Jenkins, G. M. and Reinsel, G. C. (1976). "Time Series Analysis, Forecasting and Control". Third Edition. Holden-Day. Series G.
 
-Shapiro, S. S. and Wilk, M. B. (1965). "An analysis of variance test for normality (complete samples)". Biometrika. 52(3–4): 591–611.
+Shapiro, S. S. and Wilk, M. B. (1965). "An analysis of variance test for normality (complete samples)". Biometrika. 52(3--4): 591--611.
