--- a/notebooks/07-variable-selection-notebook.qmd
+++ b/notebooks/07-variable-selection-notebook.qmd
@@ -143,7 +143,7 @@ We use the following notation:
 
 The *best subset* search strategy determines the model $\mathcal{M}$ that minimizes the $RSS_{\mathcal{M}}$ for each value, $1\leq p_{\mathcal{M}} \leq p$ (Hastie et al., 2020).
 
--   The is helpful because the selection criterion for a specific value of $p_{\mathcal{M}}$ is often optimized by the model that minimizes the RSS for that value of $p_{\mathcal{M}}$.
+-   This is helpful because the selection criterion for a specific value of $p_{\mathcal{M}}$ is often optimized by the model that minimizes the RSS for that value of $p_{\mathcal{M}}$.
 -   Furnival and Wilson (1971) proposed a "leaps and bounds" algorithm to efficiently perform best subset selection.
 
 An efficient best subset search is implemented in the `regsubsets` function in the **leaps** package.
